--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -20,6 +20,7 @@
         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
         <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Turn me on', turn_on_micropost_path(micropost) %></td>  <!--HOLY FUCKING SHIT THIS WORKS-->
+        <td><%= link_to 'Turn me off', turn_off_micropost_path(micropost) %></td> 
       </tr>
     <% end %>
   </tbody>
